Fix langs buttons when text is too large

--- a/src/app/shared/dialog-select-language/dialog-select-language.component.scss
+++ b/src/app/shared/dialog-select-language/dialog-select-language.component.scss
@@ -8,3 +8,8 @@
 	font-size: 20px;
 	margin-top: 12px;
 }
+
+.btn-lang {
+	padding: 12px;
+	cursor: pointer;
+}
